24. Nov. 2001 - amo -  bug found when component changed execution target to an other perspective; returned (root)Node is reused from "old" perspectve so that all actions do not fin a local target becose they are related to the observer of the old perspective. see TODO for more details. 
24. Nov. 2001 - amo -  changed FX2ComponentRelpaceWorker, changed behavior when component change execution target; split methods in *LocalTargerChange and PerspectiveChange.
24. Nov. 2001 - amo -  FX2Component add worker now is handled in application thread, it only acts as proxy to the methods in AFX2ComponentWorker; all methods involved must be executed in application thread
23. Nov. 2011 - amo -  tearDown for AFX2Components implemented
23. Nov. 2011 - amo -  changed initComponent in AFX2Perspective to check if it runs in application thread, otherwise execute in application thread;
22. Nov. 2011 - amo -  postHandle method added to workspace to handle menu entries and toolbars 
21. Nov. 2011 - amo -  changed onStart and onTeardown behavior, created AFX2ComponentLayout, this component holds reference to main menu and toolBar; corrected methods, cleanup. Stage reference added to workbench handle method.
17. Nov. 2011 - amo -  handleInitialLayout overloaded to pass Stage object
17. Nov. 2011 - amo -  removed ChunkDTO (class was obsolete), reorganized ComponentReplaceWorker, changed lock behavior, introduced postHandle execution in worker (init and replace worker), 
					   postHandle and remove/add method are encapsulated in one "invokeLater" block to be executed in application thread, 
					   locking simplified by releasing lock at the end of "invokeLater" block
08. Nov. 2011 - amo -  changed maven dependency from javafx2 system to compile scope, please install  "mvn install:install-file -Dfile=jfxrt.jar -DgroupId?=com.oracle -DartifactId?=javafx-runtime -Dpackaging=jar -Dversion=2.0"
07. Nov. 2011 - amo -  clean up pom.xml, removed build settings for javafx2